welcome.lessons.welcome.instructions.InstructionsDrawG.scala.error
Source:2: error: illegal start of simple pattern
for (var i:Int = 0; i < 4; i++ {
     ^Source:2: error: '<-' expected but ';' found.
for (var i:Int = 0; i < 4; i++ {
                  ^Source:2: error: '<-' expected but ';' found.
for (var i:Int = 0; i < 4; i++ {
                         ^Source:2: error: illegal start of simple pattern
for (var i:Int = 0; i < 4; i++ {
                               ^Source:6: error: '<-' expected but '}' found.
	}
        ^