welcome.lessons.welcome.instructions.InstructionsDrawG.scala.code
left()
for (var i:Int = 0; i < 4; i++ {
	forward()
}